# py-bbn

./: .dockerignore  .gitignore  .readthedocs.yml  CYTHON.md  Dockerfile  Dockerfile-2.7  Dockerfile-3.7  Dockerfile.test  LICENSE.txt  MANIFEST.in  Makefile  Makefile.bat  README.md  README.rst  _lhs.ipynb  _rhs.ipynb  build.sh  build27.sh  build37.sh  environment-py27.yml  environment-py37.yml  environment.yml  join-tree.json  publish.sh  requirements.py27  requirements.py37  requirements.txt  setup.cfg  setup.py  start.py  unittest.cfg
.github/: FUNDING.yml
dataproc/: README.md  benchmark.csv  demo.py  estimation.ipynb
docs/: Makefile  README.md  autobuild.bat  autobuild.sh  make.bat  requirements.txt
jupyter/: README.md  Untitled.ipynb  _bbn1.ipynb  _bbn2.ipynb  approximate-inference-different-structures.ipynb  approximate-inference.ipynb  exact-inference-evidences.ipynb  exact-inference-widgets.ipynb  exact-inference.ipynb  from_structure_df-00.ipynb  from_structure_df-01.ipynb  from_structure_df-02.ipynb  from_structure_df.ipynb  gaussian-inference-widgets.ipynb  generate-bbn.ipynb  joblib-demo.ipynb  libpgm.ipynb  simple-bbn.json  simple-join-tree.json  some-features.ipynb
profile/: README.md  covid.ipynb  generate-and-save.py  generate-bbn.py  generate-multi-bbn.py  generate-singly-bbn.py  load-bbn.py  load-multi-bbn-time.py  load-multi-bbn.py  load-singly-bbn-time.py  multi-bbn.json  multiply.ipynb  query.py  singly-01.ipynb  singly-02.ipynb  singly-bbn.json  singly.ipynb  time-inference-multi-bbn.py  time-inference-singly-bbn.py  time-reapply-singly-bbn.py
(+123 files in other folders)
