[metadata]
name=pybbn
version=3.2.1
author=Jee Vang
author_email=vangjee@gmail.com
description=Learning and Inference in Bayesian Belief Networks
description_file=README.md
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/vangj/py-bbn
keywords=bayesian belief network, exact inference, approximate inference, junction tree, pptc, dag, gibbs sampling, causal, causality, gaussian
install_requires=numpy, scipy, networkx, pandas
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Development Status :: 5 - Production/Stable
include_package_data=True
test_suite=nose.collector

[flake8]
max-line-length = 120
ignore = E501 E731 E741

[nosetests]
verbosity = 3
with-doctest = 1
with-coverage = 1
with-id = 1
cover-erase = 1
cover-html = 1
cover-html-dir = coverage
cover-package = pybbn
detailed-errors = 1