[metadata]
description-file = README.md

[flake8]
max-line-length = 120
ignore = E501 E731 E741 E722 E203 W503

[nosetests]
verbosity = 3
with-doctest = 1
with-coverage = 1
with-id = 1
cover-erase = 1
cover-html = 1
cover-html-dir = coverage
cover-package = pybbn
detailed-errors = 1

[unittest]
start-dir = tests
code-directories = pybbn